# ai_ui

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile.caddy  README.md  TROUBLESHOOTING.md  docker-compose.local.yml  docker-compose.openai.yaml  docker-compose.otel.yaml  docker-compose.simple.yaml  docker-compose.unified.yml  docker-compose.yaml  docker-compose.yml  requirements.txt  run-compose.sh  run.sh  test_openai.py  verify_all.sh
mcp-servers/flights/: README.md  pyproject.toml
mcp-servers/flights/flights_mcp/: __main__.py  duffel.py  schemas.py  server.py
mcp-servers/flights/tests/: test_duffel.py  test_server.py
mcp-servers/io-mcp-wrappers/: pyproject.toml
mcp-servers/io-mcp-wrappers/io_mcp_base/: __init__.py  client.py  errors.py  server.py
mcp-servers/io-mcp-wrappers/io_mcp_calendar/: __main__.py  tools.py
mcp-servers/io-mcp-wrappers/io_mcp_dashboard/: __main__.py  tools.py
mcp-servers/io-mcp-wrappers/io_mcp_excel_creator/: __main__.py  tools.py
mcp-servers/io-mcp-wrappers/io_mcp_gdrive/: __main__.py  tools.py
mcp-servers/io-mcp-wrappers/io_mcp_gmail/: __main__.py  tools.py
mcp-servers/io-mcp-wrappers/io_mcp_meeting_kb/: __main__.py  tools.py
mcp-servers/io-mcp-wrappers/io_mcp_meetings/: __main__.py  tools.py
mcp-servers/io-mcp-wrappers/io_mcp_scheduler/: __init__.py  __main__.py  tools.py
mcp-servers/io-mcp-wrappers/io_mcp_web_search/: __main__.py  tools.py
mcp-servers/io-mcp-wrappers/tests/: test_calendar_wrapper.py  test_dashboard_wrapper.py  test_errors.py  test_excel_creator_wrapper.py  test_gateway_client.py  (+8 more)
(+890 files in other folders)
