[project]
name = "flights-mcp"
version = "0.1.0"
description = "MCP server wrapping the Duffel sandbox API for IO App Builder agents."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.6",
  "mcp>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["flights_mcp*"]
